objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To indicate whether a service is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Billing: The expected Activity Type from the ETL feed</description>
        <inlineHelpText>Billing: The expected Activity Type from the ETL feed</inlineHelpText>
        <label>Activity Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_UID__c</fullName>
        <label>Bundle UID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Type_Value__c</fullName>
        <label>Channel Type Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <formula>CASE(Channel_Type_Value__c,
0,&apos;None&apos;,
1,&apos;Voice Messaging&apos;,
2,&apos;Email Messaging&apos;,
3,&apos;Text Messaging&apos;,
4,&apos;Dialer&apos;,
5,&apos;Preview&apos;,
6,&apos;Manual&apos;,
7,&apos;Web&apos;,
8,&apos;Chat&apos;,
9,&apos;Social&apos;,
10,&apos;WorkerApp&apos;,
11,&apos;Clicker&apos;,
12,&apos;Application&apos;,
13,&apos;Support&apos;,
14,&apos;Tax&apos;,
&apos;&apos;)</formula>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Services_Count__c</fullName>
        <label>Contract Services Count</label>
        <summaryForeignKey>Contract_Service__c.Service__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Code_ISO__c</fullName>
        <label>Country Code ISO</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_Length__c</fullName>
        <formula>LEN(Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type_Value__c</fullName>
        <label>Device Type Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <formula>CASE(Device_Type_Value__c,
-1,&apos;Invalid&apos;,
0,&apos;Email&apos;,
1,&apos;Fax&apos;,
2,&apos;Pager&apos;,
3,&apos;Phone&apos;,
4,&apos;WAP&apos;,
5,&apos;IM&apos;,
6,&apos;Unknown&apos;,
7,&apos;Address Book&apos;,
8,&apos;Mover&apos;,
9,&apos;Web&apos;,
13,&apos;Wireless&apos;,
14,&apos;Source Address&apos;,
15,&apos;Agent Registration Phone&apos;,
16,&apos;URL&apos;,
18,&apos;URL Campaign Default&apos;,
19,&apos;NobelBiz Trigger&apos;,
&apos;&apos;)</formula>
        <label>Device Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Hash__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Help Text: Used to match to the appropriate record in the Service__c object</description>
        <formula>IF( Service_Type_Value__c &gt;= 1 &amp;&amp; Service_Type_Value__c &lt;= 4,IF( Country_Code_ISO__c == &apos;CA&apos;, &apos;CA&apos;,Text(Country_Code__c)) &amp; &apos;#&apos;,&apos;&apos;) &amp;
IF(Service_Type_Value__c == 9 || Service_Type_Value__c = 10 || Service_Type_Value__c == 12, Text(Country_Code__c) &amp; &apos;#&apos;, &apos;&apos;) &amp;
Text(Service_Type_Value__c) &amp; &apos;#&apos; &amp;
Text(Channel_Type_Value__c) &amp; &apos;#&apos; &amp;
Text(Service_Class__c) &amp; &apos;#&apos; &amp;
Text(Device_Type_Value__c) &amp;
IF( Service_Type_Value__c == 14 || Service_Type_Value__c == 19
,
IF (NOT(ISBLANK(Region_Code__c)), &apos;#&apos; &amp; Region_Code__c, &apos;&apos;) &amp;
&apos;#&apos; &amp; Text(Usage_Type__c),&apos;&apos;)</formula>
        <inlineHelpText>Used to match to the appropriate Service</inlineHelpText>
        <label>Identifier Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Help Text: Short back end note about what the service is used for</description>
        <inlineHelpText>Short back end note about what the service is used for. For PureVoice intermediate rating, this value MUST be &apos;PureVoice&apos; or rating will not correctly process this service.</inlineHelpText>
        <label>Note</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCV_Activity_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Related PCV activity type of the call data.
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <inlineHelpText>Related PCV activity type of the call data.</inlineHelpText>
        <label>PCV Activity Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCV_Category__c</fullName>
        <description>The PureCloud Voice category hash
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <inlineHelpText>The PureCloud Voice category hash</inlineHelpText>
        <label>PCV Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCV_Group__c</fullName>
        <description>The PureCloud Voice group
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <inlineHelpText>The PureCloud Voice group</inlineHelpText>
        <label>PCV Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCV_Service_Identifier__c</fullName>
        <description>Determines PureCloud Voice service identifier if the service is billed for PCV
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <formula>Region_Code__c 
&amp; &apos;#&apos; &amp; TEXT(PCV_Activity_Type__c) 
&amp; &apos;#&apos; &amp; PCV_Group__c
&amp; &apos;#&apos; &amp; PCV_Zone__c 
&amp; &apos;#&apos; &amp; TEXT(Service_Type_Value__c) 
&amp; &apos;#&apos; &amp; PCV_Type__c 
&amp; &apos;#&apos; &amp; PCV_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines PureCloud Voice service identifier if the service is billed for PCV</inlineHelpText>
        <label>PCV Service Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCV_Type__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <description>The PureCloud Voice Type
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <inlineHelpText>The PureCloud Voice Type</inlineHelpText>
        <label>PCV Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCV_Zone__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <description>The PureCloud Voice zone.
Downstream Impact: Only used for PureCloud Voice, not extensible
Department Owner: Cloud Billing</description>
        <inlineHelpText>The PureCloud Voice zone.</inlineHelpText>
        <label>PCV Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <description>Defined region of the Genesys Platform in which the activity occurred.

Initially US, EU , AP for BEEEC</description>
        <label>Region Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Class__c</fullName>
        <label>Service Class</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type_Value__c</fullName>
        <label>Service Type Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>CASE(Service_Type_Value__c,
1,&apos;Outbound Calling&apos;,
2,&apos;Inbound Calling&apos;,
3,&apos;Outbound Direct Connect&apos;,
4,&apos;Inbound Direct Connect&apos;,
5,&apos;Bad Numbers&apos;,
6,&apos;Answering Machine Hangups&apos;,
7,&apos;Email&apos;,
8,&apos;Client Management Services&apos;,
9,&apos;Outbound Text&apos;,
10,&apos;Inbound Text&apos;,
11,&apos;Reporting&apos;,
12,&apos;Outbound Text Failure&apos;,
13,&apos;Dialer&apos;,
14,&apos;Agent Seat&apos;,
15,&apos;Attempt Not Connected&apos;,
16,&apos;Web&apos;,
17,&apos;Chat&apos;,
18,&apos;Social&apos;,
19,&apos;Port Usage&apos;,
20,&apos;Agent Time&apos;,
&apos;&apos;)</formula>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCampaign_Type_Value__c</fullName>
        <label>SubCampaign Type Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubCampaign_Type__c</fullName>
        <formula>CASE(SubCampaign_Type_Value__c,
-2,&apos;Unknown&apos;,
-1,&apos;None&apos;,
0,&apos;Alert&apos;,
1,&apos;Interactive&apos;,
2,&apos;Inbound&apos;,
3,&apos;Event Based&apos;,
&apos;&apos;)</formula>
        <label>SubCampaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SureTax_Transaction_Type_Code__c</fullName>
        <description>Transaction type indicator for SureTax
Downstream Impact: Populates the respective field on Service Usage
Department Owner: Cloud Billing</description>
        <inlineHelpText>Transaction type indicator for SureTax</inlineHelpText>
        <label>SureTax Transaction Type Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <externalId>true</externalId>
        <label>UID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <description>Optional delimiter to define additional breakdown for a particular Channel Type/Service Class breakdown.</description>
        <label>Usage Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Calling_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is set for outbound calls which should use calling rates table for pricing.This is used to set the default for the service.</description>
        <label>Use Calling Rates</label>
        <type>Checkbox</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>Activity_Type_1</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Channel_Type_Value__c</columns>
        <columns>Service_Type_Value__c</columns>
        <columns>Service_Class__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Type__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>Channel_Type_Value__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activity Type 5</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Device_Type__c</columns>
        <columns>SubCampaign_Type__c</columns>
        <columns>Service_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Device_Type__c</columns>
        <columns>SubCampaign_Type__c</columns>
        <columns>Service_Class__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Soft_Deleted</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Device_Type__c</columns>
        <columns>SubCampaign_Type__c</columns>
        <columns>Service_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Soft Deleted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Assigned_Active</fullName>
        <columns>UID__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Channel_Type_Value__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Service_Class__c</columns>
        <columns>Service_Type_Value__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Contract_Services_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Assigned Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Call_Recording</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Device_Type__c</columns>
        <columns>SubCampaign_Type__c</columns>
        <columns>Service_Class__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Telephony</value>
        </filters>
        <label>Telephony</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Channel_Type_0</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Device_Type_Value__c</columns>
        <columns>Service_Class__c</columns>
        <columns>Service_Type_Value__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>UID__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel_Type_Value__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Service_Class__c</field>
            <operation>greaterOrEqual</operation>
            <value>19</value>
        </filters>
        <label>Channel Type 4 SC &gt;= 19</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Channel_Type_8</fullName>
        <columns>NAME</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Channel_Type_Value__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Device_Type_Value__c</columns>
        <columns>Service_Class__c</columns>
        <columns>Service_Type_Value__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>UID__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel_Type_Value__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>Channel Type 12</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chat</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>Contract_Services_Count__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Channel_Type_Value__c</columns>
        <columns>Service_Class__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Device_Type__c</columns>
        <columns>SubCampaign_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Chat</value>
        </filters>
        <label>Chat</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Code_ISO_SC</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>-1</value>
        </filters>
        <label>Country Code -1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DDI_DID_Lines_In_Use</fullName>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Identifier_Hash__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Type_Value__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>Service_Class__c</field>
            <operation>greaterOrEqual</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>Service_Class__c</field>
            <operation>lessOrEqual</operation>
            <value>6</value>
        </filters>
        <label>DDI/DID Lines In Use</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ends_with_4_1_2_3</fullName>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Identifier_Hash__c</field>
            <operation>startsWith</operation>
            <value>14#3#10#6#</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Starts with 14#3#10#6#</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hash_like_19_1_20_6_US_1</fullName>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Identifier_Hash__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Identifier_Hash__c</field>
            <operation>startsWith</operation>
            <value>14#1#32#6#US#1</value>
        </filters>
        <label>Hash starts 14#1#32#6#US#1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Services</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inbound_Voice</fullName>
        <columns>UID__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Type_Value__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Service_Class__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inbound Voice</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Service_Deactivation_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(Active__c),Contract_Services_Count__c &gt; 0)</errorConditionFormula>
        <errorMessage>Cannot deactivate a service which which is associated with Contract Services.</errorMessage>
    </validationRules>
</CustomObject>